hw7/mytesthaha.log
  File "GA3C.py", line 43
    setattr(Config, x, type(getattr(Config, x))(y))b
                                                   ^
SyntaxError: invalid syntax
